--- a/Fletch_Framework/Fletch/AddHistoryWindowController.xib
+++ b/Fletch_Framework/Fletch/AddHistoryWindowController.xib
@@ -33,6 +33,10 @@
                         <buttonCell key="cell" type="push" title="添加" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="geT-w2-a5n">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" size="13" name=".PingFangSC-Regular"/>
+                            <string key="keyEquivalent" base64-UTF8="YES">
+DQ
+</string>
+                            <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                         </buttonCell>
                         <connections>
                             <action selector="addHistory:" target="-2" id="IOn-wk-S9A"/>
