--- a/Fletch_Framework/Fletch/AddHistoryWindowController.xib
+++ b/Fletch_Framework/Fletch/AddHistoryWindowController.xib
@@ -116,7 +116,7 @@ DQ
                     </datePicker>
                     <button translatesAutoresizingMaskIntoConstraints="NO" id="AI1-0T-L6a">
                         <rect key="frame" x="94" y="21" width="155" height="18"/>
-                        <buttonCell key="cell" type="check" title="合并同一天的更新记录" bezelStyle="regularSquare" imagePosition="left" inset="2" id="zED-Jo-T5D">
+                        <buttonCell key="cell" type="check" title="合并同一天的更新记录" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="zED-Jo-T5D">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                             <font key="font" metaFont="system"/>
                         </buttonCell>
