--- a/Fletch_Framework/Fletch/AddHistoryWindowController.xib
+++ b/Fletch_Framework/Fletch/AddHistoryWindowController.xib
@@ -2,8 +2,10 @@
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="13196" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaDFRPlugin" version="13038"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13196"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
+        <capability name="the Touch Bar" message="Use a version of macOS with Touch Bar support." minToolsVersion="8.1" minSystemVersion="10.12.2" requiredIntegratedClassName="NSTouchBar"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="AddHistoryWindowController">
@@ -35,7 +37,7 @@
                         </constraints>
                         <buttonCell key="cell" type="push" title="添加" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="geT-w2-a5n">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                            <font key="font" size="13" name=".PingFangSC-Regular"/>
+                            <font key="font" usesAppearanceFont="YES"/>
                             <string key="keyEquivalent" base64-UTF8="YES">
 DQ
 </string>
@@ -78,9 +80,36 @@ DQ
                             <rect key="frame" x="1" y="1" width="363" height="159"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <textView importsGraphics="NO" verticallyResizable="YES" usesFontPanel="YES" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="2D3-6s-fEl" customClass="PBUpdateNotesTextView">
+                                <textView importsGraphics="NO" richText="NO" verticallyResizable="YES" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="2D3-6s-fEl" customClass="PBUpdateNotesTextView">
                                     <rect key="frame" x="0.0" y="0.0" width="363" height="159"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <touchBar key="touchBar" id="4jk-LB-RDb">
+                                        <touchBarItems>
+                                            <touchBarSpacerItem identifier="NSTouchBarItemIdentifierFlexibleSpace" id="IcO-l1-j4Z"/>
+                                            <touchBarItem id="HyG-h5-GfH">
+                                                <viewController key="viewController" id="yPN-Rh-ZOt">
+                                                    <button key="view" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="SNX-4y-c1f">
+                                                        <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="100" id="gQE-Ea-RZN"/>
+                                                        </constraints>
+                                                        <buttonCell key="cell" type="push" title="添加" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Wyu-Kw-WwP">
+                                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                                            <font key="font" usesAppearanceFont="YES"/>
+                                                            <string key="keyEquivalent" base64-UTF8="YES">
+DQ
+</string>
+                                                            <modifierMask key="keyEquivalentModifierMask" command="YES"/>
+                                                        </buttonCell>
+                                                        <connections>
+                                                            <action selector="addHistory:" target="-2" id="sW9-Dy-SYO"/>
+                                                        </connections>
+                                                    </button>
+                                                </viewController>
+                                                <size key="designTimeSize" width="100" height="30"/>
+                                            </touchBarItem>
+                                        </touchBarItems>
+                                    </touchBar>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <size key="minSize" width="363" height="159"/>
                                     <size key="maxSize" width="463" height="10000000"/>
@@ -117,7 +146,7 @@ DQ
                         </datePickerCell>
                     </datePicker>
                     <button translatesAutoresizingMaskIntoConstraints="NO" id="AI1-0T-L6a">
-                        <rect key="frame" x="94" y="21" width="155" height="18"/>
+                        <rect key="frame" x="94" y="22" width="155" height="18"/>
                         <buttonCell key="cell" type="check" title="合并同一天的更新记录" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="zED-Jo-T5D">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                             <font key="font" metaFont="system"/>
